# d4-asset-extractor

./: .gitignore  LICENSE  Makefile  README.md  RESOURCES.md  pyproject.toml
docs/: ARCHITECTURE.md  CASC-PIPELINE.md  CASC_REWRITE_PROGRESS.md  RESOURCES.md
scripts/: build_test_fixtures.py  cleanup.sh  debug_extraction.py  download-game-data.ps1  download-game-data.sh  fetch_icons_aggressive.py  fetch_wowhead_icons.py  test_texture.py
src/d4_asset_extractor/: __init__.py  __main__.py  bc_decoder.py  blizzard_cdn.py  casc.py  casc_reader.py  cli.py  download.py  search.py  strings.py  tex_converter.py  texconv.py  texture.py  texture_definition.py  texture_extractor.py  tvfs_parser.py
tests/: __init__.py  test_corrections.py  test_format_coverage.py
